# 100-days-of-GPU

./: 100 days challenge.md  LICENSE  README.md
day 02/: MatrixAdd.cu
day 03/: matrix_vec_mult.cu
day 04/: partialSum.cu
day 05/: LayerNorm.cu
day 06/: MatrixTranspose.cu
day 07/: 2d_convolution_with_tiling.cu  one_d_convolution.cu  one_d_convolution_with_tiling.cu
day 08/: prefixsum_brent_kung_algorithm.cu
day 09/: flash_attention_forward.cu
day 10/: flash_attention_forward.cu  torch_test.py
day 100/: Kullback-Leibler.cu
day 11/: benchmark.py  sparse_MatrixVecMult_Hybrid_ELL_COO.cu
day 12/: merge_sort.cu
day 14/: cmpFHD.cu  cmpFHd_real_image.cu
day 16/: NaiveBayes.cu  NaiveBayesKernel.cuh  NaiveBayesTrain.cpp  NaiveBayesTrain.cuh  main.cpp
day 17/: vectorAdditionCublas.cu
day 18/: MutMul_cublas.cu
day 19/: fcnet.cu
day 20/: RoPE.cu
day 21/: cuda_sgc.cu
day 22/: EM_kernel.cu
day 23/: SwiGLU.cu
day 24/: atomicAddLL.cu
day 25/: MCTS.cu
day 26/: hl_gauss.cu
day 27/: mirror_d.cu
day 28/: wavefunction_evolution.cu
day 29/: Cuda_graphs.cu  README.md
day 30/: convolution_2d.cpp  flash_attention_forward.cpp  gelu.cpp  layer_norm.cpp  matmul_rocblas.cpp  matrix_add.cpp  parallel_merge.cpp  partial_sum.cpp  prefix_sum.cpp  rope_hip.cpp  sparse_MatrixVecMult_Hybrid_ELL_COO.cpp  vec_rocblas.cpp  vector_add.cpp  vector_matrix_mult.cpp
day 31/: game_of_life.cu
day 32/: CMakeLists.txt  benchmark_results.txt  benchmark_sgemm.cpp  kernel3_registers.cpp  kernel3_registers.h  sgemm.cpp  sgemm.h
day 33/: CMakeLists.txt  main.cpp  matrix_mult.h  sparse_gemm.cpp  strassen.cpp
day 36/: heat_diffusion.cpp
day 37/: cuda_ray_tracing.cu
day 38/: vector_addition_triton.py
day 39/: matrixMult_triton.py
day 40/: softmax_triton.py
day 41/: Fused_MatMul_ReLU.py
day 42/: 1d_convolution_triton.py
day 43/: MatrixMul_Autotuning_Triton.py
(+77 files in other folders)
